MDEV-31953 madvise(..., MADV_FREE) is causing a performance regression

buf_page_t::set_os_unused(): Remove the system call that had been added in
commit 16c9718758cb3bbff76672405d4ce1bce6da6c6f and revised in
commit c1fd082e9c7369f4511eb5a52e58cb15489caa74 for Microsoft Windows.

buf_pool_t::garbage_collect(): A new function to collect any garbage
from the InnoDB buffer pool that can be removed without writing any
log or data files. This will also invoke madvise() or
DiscardVirtualMemory() for all of buf_pool.free.

buf_resize_callback(): Simply invoke buf_pool.resize().

buf_resize_start(): If there is no actual change to
innodb_buffer_pool_size, invoke buf_pool_t::garbage_collect()
instead of starting buf_resize_callback() in another thread.